# ros-rerun

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  pixi.toml  requirements.txt  rust-toolchain
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: links.yml  rust.yml
config/: structure.toml
crates/rerun_ros/: Cargo.toml  build.rs
crates/rerun_ros/src/: channel.rs  cli.rs  main.rs  node.rs  topology.rs  worker.rs
crates/rerun_ros/src/archetypes/: archetype.rs  dynamic_message.rs  mod.rs  text.rs
crates/rerun_ros/src/config/: defs.rs  mod.rs
crates/ros_rerun/: Cargo.toml  package.xml
crates/ros_rerun/src/: channel.rs  cli.rs  lib.rs  main.rs  node.rs  topology.rs  worker.rs
crates/ros_rerun/src/archetypes/: archetype.rs  text.rs
crates/ros_rerun/src/config/: defs.rs  mod.rs
crates/ros_rerun/src/ros_introspection/: field.rs  type.rs
crates/ros_rerun_types/: Cargo.toml
crates/ros_rerun_types/src/: converter.rs  lib.rs  register.rs
crates/ros_rerun_types/src/converters/: mod.rs  points3d.rs  text.rs
crates/ros_rerun_types/src/definitions/: mod.rs
crates/ros_rerun_types/src/parsers/: sensor_msgs.rs
design/: proposal.md
scripts/clippy_wasm/: clippy.toml
src/rerun_ros/crates/rerun_ros/: Cargo.toml
src/rerun_ros/crates/rerun_ros/src/: main.rs
