[package]
authors.workspace = true
categories = []                                                      # TODO: fill in if you plan on publishing the crate
description = ""                                                     # TODO: fill in if you plan on publishing the crate
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license.workspace = true
name = "rerun_ros"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
ament_rs = "0.3.0"
anyhow = "1.0.98"
cdr = "0.2.4"
clap = { version = "4.5.41", features = ["derive"] }
log = "0.4.27"
rclrs = { git = "https://github.com/CAJ2/ros2_rust.git", branch = "main" }
rosidl_runtime_rs = { git = "https://github.com/ros2-rust/rosidl_runtime_rs", branch = "main" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.9.2"
widestring = "1.2.0"

[dev-dependencies]
