[package]
authors.workspace = true
categories = []                                                      # TODO: fill in if you plan on publishing the crate
description = ""                                                     # TODO: fill in if you plan on publishing the crate
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license.workspace = true
name = "rerun_ros"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
ahash.workspace = true
ament_rs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
cdr.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot.workspace = true
rclrs.workspace = true
regex.workspace = true
rerun.workspace = true
rosidl_runtime_rs.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
widestring.workspace = true

[dev-dependencies]
