[package]
# cargo-ament-build throws an error when using .workspace = true
authors = ["rerun.io <opensource@rerun.io>"]
edition = "2021"
homepage = "https://github.com/rerun-io/rerun-ros"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license = "MIT OR Apache-2.0"
name = "rerun_ros"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/rerun-io/rerun-ros"
rust-version = "1.85"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
ahash.workspace = true
ament_rs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
cdr.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot.workspace = true
rclrs.workspace = true
regex.workspace = true
rerun.workspace = true
rosidl_runtime_rs.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
widestring.workspace = true

[dev-dependencies]
