[package]
# cargo-ament-build throws an error when using .workspace = true
authors = [
    "Christian Johansen <johansen.christian.a@gmail.com>",
    "rerun.io <opensource@rerun.io>",
]
edition = "2021"
homepage = "https://github.com/CAJ2/ros-rerun"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = [] # TODO: fill in if you plan on publishing the crate
license = "MIT OR Apache-2.0"
name = "ros_rerun"
publish = false # TODO: set to `true` if you plan on publishing the crate
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/CAJ2/ros-rerun"
rust-version = "1.90"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]


[features]
default = []


[dependencies]
ros_rerun_types.workspace = true

ahash.workspace = true
ament_rs.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot.workspace = true
rclrs.workspace = true
regex.workspace = true
rerun.workspace = true
serde.workspace = true
stream-cancel.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true

[dev-dependencies]
