[package]
# cargo-ament-build throws an error when using .workspace = true
authors = [
    "Christian Johansen <johansen.christian.a@gmail.com>",
    "rerun.io <opensource@rerun.io>",
]
edition = "2021"
homepage = "https://github.com/CAJ2/ros-rerun"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = [] # TODO: fill in if you plan on publishing the crate
license = "MIT OR Apache-2.0"
name = "ros_rerun_types"
publish = false # TODO: set to `true` if you plan on publishing the crate
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/CAJ2/ros-rerun"
rust-version = "1.90"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]


[features]
default = []


[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dyn-clone.workspace = true
log.workspace = true
rerun.workspace = true
rclrs.workspace = true
rosidl_runtime_rs.workspace = true
serde.workspace = true
stream-cancel.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
